--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,7 @@ body {
     color: black;
     padding: 10px 20px;
     border-radius: 5px;
-    z-index: 1100;
+    z-index: 1000;
 }
 
 .close {
@@ -210,7 +210,7 @@ body {
     top: 10px;
     right: 10px;
     cursor: pointer;
-    font-size: 1.5em;
+    font-size: 20px;
 }
 
 .footer {
@@ -219,19 +219,30 @@ body {
     width: 100%;
     position: fixed;
     bottom: 0;
-    background-color: #222;
+    background-color: rgba(0, 0, 0, 0.7);
     padding: 10px 0;
 }
 
 .footer img {
+    width: 50px;
+    height: 50px;
     cursor: pointer;
-    width: 30px;
-    height: 30px;
+    transition: box-shadow 0.9s;
 }
 
-@media screen and (min-width: 600px) {
-    .title {
-        width: 50%;
-        max-width: 400px;
+.footer img:hover {
+    box-shadow: 0 0 10px yellow;
+}
+
+@keyframes neon {
+    0%, 100% {
+        text-shadow: 0 0 30px #ff00ff, 0 0 40px #ff00ff, 0 0 50px #ff00ff, 0 0 60px red, 0 0 70px red, 0 0 80px red;
     }
+    50% {
+        text-shadow: 0 0 30px red, 0 0 40px red, 0 0 50px red, 0 0 60px #ff00ff, 0 0 70px #ff00ff, 0 0 80px #ff00ff;
+    }
+}
+
+.rank, .title {
+    animation: neon 3s infinite;
 }
